--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
+    env_file:
+      - auth-service/.env
     environment:
       - DB_URL=postgres://user:password@auth-db:5432/authdb?sslmode=disable
     depends_on:
@@ -16,10 +18,13 @@ services:
   auth-db:
     container_name: auth-db
     image: postgres:latest
+    restart: always
+    env_file:
+      - auth-service/.env
     environment:
-      - POSTGRES_USER=user
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=authdb
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_DB=${DB_NAME}
     ports:
       - "5433:5432"
     volumes:
@@ -32,6 +37,8 @@ services:
     build:
       context: blog-service/
       dockerfile: Dockerfile
+    env_file:
+      - blog-service/.env
     environment:
       -  DB_URL=postgres://user:password@blog-db:5432/blogdb?sslmode=false
     ports:
@@ -42,12 +49,15 @@ services:
       - blog-network
   
   blog-db:
+    container_name: blog
     image: postgres:latest
     restart: always
+    env_file:
+      - blog-service/.env
     environment:
-      - POSTGRES_USER=user
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=blogdb
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_DB=${DB_NAME}
     ports:
       - "5434:5432"
     networks:
