--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       context: auth-service/
       dockerfile: Dockerfile
     ports:
-      - "8080:8080"
+      - "8081:8080"
     env_file:
       - auth-service/.env
     environment:
@@ -21,10 +21,10 @@ services:
     restart: always
     env_file:
       - auth-service/.env
-    environment:
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
-      - POSTGRES_DB=${DB_NAME}
+#    environment:
+#      - POSTGRES_USER=${DB_USER}
+#      - POSTGRES_PASSWORD=${DB_PASSWORD}
+#      - POSTGRES_DB=${DB_NAME}
     ports:
       - "5433:5432"
     volumes:
@@ -39,27 +39,23 @@ services:
       dockerfile: Dockerfile
     env_file:
       - blog-service/.env
-    environment:
-      -  DB_URL=postgres://user:password@blog-db:5432/blogdb?sslmode=false
     ports:
-      - "8082:8080"
+      - "8082:8081"
     depends_on:
       - blog-db
     networks:
       - blog-network
   
   blog-db:
-    container_name: blog
+    container_name: blog-db
     image: postgres:latest
     restart: always
     env_file:
       - blog-service/.env
-    environment:
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
-      - POSTGRES_DB=${DB_NAME}
     ports:
-      - "5434:5432"
+      - "5432:5432"
+    volumes:
+      - blog-db-data:/var/lib/postgresql/data
     networks:
       - blog-network
 
@@ -72,4 +68,4 @@ networks:
 
 volumes:
   auth-db-data:
-
+  blog-db-data:
