fix: env example files

--- a/auth-service/.env.example
+++ b/auth-service/.env.example
@@ -5,11 +5,11 @@ APP_PORT=8081
 APP_DEBUG=true
 
 # Database
-DB_HOST=postgres
-DB_PORT=5432
-DB_NAME=auth_db
-DB_USER=postgres
-DB_PASSWORD=postgres
+POSTGRES_HOST=auth-db
+POSTGRES_PORT=5432
+POSTGRES_DB=auth_db
+POSTGRES_USER=auth_user
+POSTGRES_PASSWORD=auth_password
 DB_SSL_MODE=disable
 
 # JWT
