--- a/blog-service/.env.example
+++ b/blog-service/.env.example
@@ -1,15 +1,15 @@
 # Application
 APP_NAME=blog-service
 APP_ENV=development
-APP_PORT=8080
+APP_PORT=8082
 APP_DEBUG=true
 
 # Database
-DB_HOST=postgres
-DB_PORT=5432
-DB_NAME=blog_db
-DB_USER=postgres
-DB_PASSWORD=postgres
+POSTGRES_HOST=blog-db
+POSTGRES_PORT=5432
+POSTGRES_DB=blog_db
+POSTGRES_USER=blog_user
+POSTGRES_PASSWORD=blog_password
 DB_SSL_MODE=disable
 
 # JWT
