--- a/auth-service/Dockerfile
+++ b/auth-service/Dockerfile
@@ -1,5 +1,6 @@
 # Use the official Golang image as a build stage
-FROM golang:1.23 AS builder
+FROM golang:1.23-alpine AS builder
+
 
 # Set the Current Working Directory inside the container
 WORKDIR /app
@@ -17,7 +18,8 @@ COPY . .
 RUN CGO_ENABLED=0 GOOS=linux go build -o main ./cmd/server
 
 # Start a new stage from scratch
-FROM alpine:latest  
+#FROM alpine:latest
+FROM scratch
 
 # Set the Current Working Directory inside the container
 WORKDIR /root/
